SFDC Automation/src/objects/Vehicle__c.object
<CustomObject>
    <fields>
        <fullName>RSM_Health_Status__c</fullName>
        <label>Health Status</label>
        <picklist>
            <picklistValues>
                <fullName>Requires Shop Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Has Ticket(s) Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No issues reported</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Device</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RSM_Installation_Status__c</fullName>
        <formula>IF( ISPICKVAL(RSM_Device_Status__c, &quot;Installed&quot;) , &quot;Installed&quot;, 
IF(ISPICKVAL(RSM_Device_Status__c, &quot;Installed with Repairs&quot;) , &quot;Installed with Repairs&quot;, 
IF(ISPICKVAL(RSM_Device_Status__c, &quot;Registered&quot;) , &quot;Registered&quot;, &quot;&quot;) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installation Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSM_IsIFTLiable_Date__c</fullName>
        <description>RydeSmart IFT Liable Date</description>
        <label>IsIFTLiable Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RSM_IsIFTLiable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsIFTLiable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSM_Is_Paper_Less_Trip_Ready__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Paper Less Trip Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSM_Last_Billing_Date__c</fullName>
        <description>RydeSmart last billing date</description>
        <label>Last Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RSM_Last_Bread_Crumb__c</fullName>
        <label>Last Bread Crumb</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSM_Last_City__c</fullName>
        <label>Last City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSM_Last_Ignition_Status__c</fullName>
        <label>Last Ignition Status</label>
        <picklist>
            <picklistValues>
                <fullName>ON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OFF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RSM_Last_Location__c</fullName>
        <description>To Capture vehicle&apos;s last latitude and longitude</description>
        <label>Last Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>RSM_Last_Road__c</fullName>
        <label>Last Road</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSM_Last_State__c</fullName>
        <label>Last State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSM_Next_Trip_Start_Date__c</fullName>
        <label>Next Trip Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RSM_Order_Status__c</fullName>
        <description>Field to store RydeSmart order information</description>
        <label>Order Status</label>
        <picklist>
            <picklistValues>
                <fullName>Ordered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RSM_Overall_Status__c</fullName>
        <formula>IF(
   ISPICKVAL(RSM_Order_Status__c,&quot;&quot;),&quot;&quot;,

IF( AND( OR( ISPICKVAL(RSM_Order_Status__c, &quot;Ordered&quot;), ISPICKVAL(RSM_Order_Status__c,&quot;Shipped&quot;),
        ISPICKVAL(RSM_Order_Status__c, &quot;Delivered&quot;), ISPICKVAL(RSM_Order_Status__c,&quot;Received&quot;)),
        RSM_Installation_Status__c==&quot;&quot;), &quot;Ordering&quot;,  

IF( AND( OR(RSM_Installation_Status__c==&quot;Installed&quot;,RSM_Installation_Status__c==&quot;Registered&quot;,
  RSM_Installation_Status__c==&quot;Installed with Repairs&quot;),RSM_Billing_Status__c == false),
  &quot;Installation&quot;,

IF(RSM_Billing_Status__c == True, &quot;Billing&quot;,&quot;&quot; )
)  
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSM_Rental_Type__c</fullName>
        <label>Rental Type</label>
        <picklist>
            <picklistValues>
                <fullName>Rental A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RSM_Request_for_Billing__c</fullName>
        <label>Request for Billing</label>
        <picklist>
            <picklistValues>
                <fullName>Send to Activate Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to Activate Billing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RSM_Service_Level_Change__c</fullName>
        <description>Field to capture if the vehicle is Upgraded or Downgraded (The logic is calculated based on Service level and Additional Service level)</description>
        <label>RSM Service Level Change</label>
        <picklist>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downgrade</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RSM_Service_Level_Prior_value__c</fullName>
        <label>RSM Service Level Prior value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSM_Service_Level__c</fullName>
        <description>Displays Service Level of the vehicle</description>
        <label>Service Level</label>
        <picklist>
            <picklistValues>
                <fullName>Plus 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RSM_Service_level_Change_Date__c</fullName>
        <description>Field to capture the date when RSM Service level changed</description>
        <label>RSM Service level Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RSM_To__c</fullName>
        <label>To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RSM_Vendor__c</fullName>
        <description>This is the list of different RydeSmart vendors- will be read only in salesforce. Information will be read from the telemetry database - it will originate in the Contract creator.</description>
        <label>RSM_Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>Telematics</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RSM__c</fullName>
        <description>Displays RydeSmart contract status</description>
        <label>RS Contract Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted to SSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected by SSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deleted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RS_Account_Product_Lines__c</fullName>
        <label>RS Account Product Line</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rated_Miles__c</fullName>
        <label>Rated Miles</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rated_Revenue__c</fullName>
        <label>Rated Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reefer_Gallons__c</fullName>
        <label>Reefer Gallons</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reefer_Hours__c</fullName>
        <label>Reefer Hours</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reefer_Rate_Per_Hour__c</fullName>
        <label>Reefer Rate Per Hour</label>
        <precision>11</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reefer_Rate__c</fullName>
        <label>Reefer Rate</label>
        <precision>11</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Default_Type__c</fullName>
        <defaultValue>&quot;Used&quot;</defaultValue>
        <description>Used to default in the &apos;Used&apos; value for creating the product name.</description>
        <label>Renewal Default Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ryder_Gallons__c</fullName>
        <label>Ryder Gallons</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAFETY_PRGM__c</fullName>
        <label>Safety Program</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAM_CLASS__c</fullName>
        <description>Sam Class</description>
        <label>SAM Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAM_Desc__c</fullName>
        <label>SAM Desc</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAM_Odom__c</fullName>
        <label>SAM Odom</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPECIAL_INSTRUCTIONS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special Instructions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SRVC_ISLAND__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Island</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SUBSTITUTION__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Substitution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SUBS_DURING_PM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sub During PM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SUSPNS_MDL__c</fullName>
        <label>Suspension MDL</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUSPNS_MFG__c</fullName>
        <label>Suspension MFG</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUSPNS_TYP__c</fullName>
        <label>Suspension Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SaleInProcess__c</fullName>
        <label>SaleInProcess</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_In_Process_Date__c</fullName>
        <label>Sale In Process Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sales_Date__c</fullName>
        <formula>Bill_of_Sale__r.VEHICLE_SOLD_DATE__c</formula>
        <label>Sales Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Price__c</fullName>
        <formula>Bill_of_Sale__r.SALES_AMOUNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sell_Loc_Code__c</fullName>
        <label>Sell Loc Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sleeper_Size__c</fullName>
        <label>Sleeper Size</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sleeper_Type__c</fullName>
        <label>Sleeper Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate whether a vehicle has been sold and not available in the inventory.</description>
        <inlineHelpText>Field to indicate whether a vehicle has been sold and not available in the inventory.</inlineHelpText>
        <label>Sold Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spec_Rate_Cd__c</fullName>
        <label>Spec Rate Cd</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpecialPrice__c</fullName>
        <label>SpecialPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TIRES__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tires</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRANS_MDL__c</fullName>
        <label>Transmission Model</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRANS_MFG__c</fullName>
        <label>Transmission MFG</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRANS_TYP__c</fullName>
        <label>Transmission Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Take_Price_Percent__c</fullName>
        <formula>IF(Ask_Price__c &gt; 0, Take_Price__c / Ask_Price__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Take Price (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Take_Price__c</fullName>
        <label>Take Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Term_Extension_or_Redeploy__c</fullName>
        <inlineHelpText>Indicates whether Asset Management has approved this unit to be redeployed or term extended. ATTENTION, this is not a blanket approval. It sill may not be approved based on the term and rated miles</inlineHelpText>
        <label>Term Extension or Redeploy</label>
        <picklist>
            <picklistValues>
                <fullName>Go</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Go</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tire_Size__c</fullName>
        <label>Tire Size</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trans_Number_Of_Speeds__c</fullName>
        <label>Trans Number Of Speeds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <description>This field will hold the transaction type of the vehicle. Eg: Lease Extension</description>
        <label>Transaction Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transmission_Type2__c</fullName>
        <description>This field holds the transmission types for a vehicle.</description>
        <label>Transmission Type</label>
        <picklist>
            <picklistValues>
                <fullName>Auto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Shift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UTC_Location__c</fullName>
        <formula>Bill_of_Sale__r.LOCATION_CODE__c</formula>
        <label>UTC Location</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <externalId>true</externalId>
        <label>Unit Number</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>VEH_CLS_SAM_DS__c</fullName>
        <description>SAM Description</description>
        <label>VEH_CLS_SAM_DS</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VOSA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VOSA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vehicle_Type__c</fullName>
        <label>Vehicle Type</label>
        <picklist>
            <picklistValues>
                <fullName>Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WASH_PROVIDED_BY__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wash Provided By</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WASH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wash</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Warranty__c</fullName>
        <label>Warranty</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Was_Replaced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator for Replaced units</description>
        <label>Was Replaced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Washes__c</fullName>
        <label>Washes</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wheel_Base__c</fullName>
        <label>Wheel Base</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wheel_count__c</fullName>
        <label>Wheel Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>automatedRenewalCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>automatedRenewalCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>depr_mor_am__c</fullName>
        <label>DepreciationAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>display_code__c</fullName>
        <defaultValue>false</defaultValue>
        <label>display_code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>excs_hrs_pc__c</fullName>
        <label>ExcessHrsPercent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>excs_hrs_srchg_am__c</fullName>
        <label>ExcessHoursSurchargeAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>excs_mils_pc__c</fullName>
        <label>Excess Miles Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>excs_mils_srchg_am__c</fullName>
        <label>Excess Miles Surcharge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>meq_sale_prc_am__c</fullName>
        <defaultValue>0</defaultValue>
        <description>sold</description>
        <label>meq_sale_prc_am</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>reefer_eng_hrs__c</fullName>
        <label>Current Reefer Hrs</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Vehicle</label>
    <listViews>
        <fullName>Out_of_service_vehicles</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CUSTOMER_BRANCH__c</columns>
        <columns>COST_SHEET_NUM__c</columns>
        <columns>In_Service_Date__c</columns>
        <columns>EXPIRATION_DATE__c</columns>
        <columns>Rated_Revenue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Rated_Revenue__c</field>
            <operation>equals</operation>
            <value>USD 0</value>
        </filters>
        <label>Zero Rated Revenue vehicles</label>
        <sharedTo>
            <group>SystemAdmin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Vehicles</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CUSTOMER_BRANCH__c</columns>
        <columns>In_Service_Date__c</columns>
        <columns>Latest_Revenue_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RSM_Ac_Product_Line__c</field>
            <operation>equals</operation>
            <value>NRV</value>
        </filters>
        <label>Vehicles</label>
    </listViews>
    <nameField>
        <label>Unit #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicles</pluralLabel>
    <recordTypes>
        <fullName>FMS_RIL</fullName>
        <active>true</active>
        <description>Record Type for FMS/RIL vehicles</description>
        <label>FMS RIL</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_Ryder_Vehicle_NRV</fullName>
        <active>true</active>
        <description>Record Type for Non Ryder Vehicles.</description>
        <label>Non Ryder Vehicle (NRV)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rental</fullName>
        <active>true</active>
        <description>Record Type for Rental Vehicles</description>
        <label>Rental</label>
    </recordTypes>
    <recordTypes>
        <fullName>UVS</fullName>
        <active>true</active>
        <description>Record Type for UVS Vehicles</description>
        <label>UVS</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>RSM_Demo_StartDate_EndDate</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( RSM_Demo__c == True, OR( ISNULL(RSM_From__c), ISNULL(RSM_To__c ) ))</errorConditionFormula>
        <errorMessage>Start and End are required fields.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RSM_UnitNo_ReadOnly_Managers</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(Name),$Profile.Name = &quot;RydeSmart Manager&quot;)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>You do not have permissions to edit this field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RSM_UnitNo_ReadOnly_Users</fullName>
        <active>true</active>
        <description>Restrict RydeSmart Users and Managers to edit this field</description>
        <errorConditionFormula>AND(ISCHANGED(Name),$Profile.Name = &quot;RydeSmart User&quot;)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>You do not have permissions to edit this field</errorMessage>
    </validationRules>
</CustomObject>